--- a/src/app/modules/author-nav/author-nav.component.scss
+++ b/src/app/modules/author-nav/author-nav.component.scss
@@ -195,24 +195,26 @@
 //Notifications
 .notification-card {
   display: flex;
-  width: 291px;
-  padding: 21px 20px 20px 20px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border-radius: 10px;
-  border: 1px solid #e9adff;
-  background: #fff;
-  color: #000;
-  font-family: "League Spartan";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  cursor: pointer;
+    width: 226px;
+    padding: 21px 20px 20px 20px;
+    gap: 10px;
+    border-radius: 10px;
+    height: 244px;
+    scrollbar-width: thin;
+    scrollbar-color: #a426d1 transparent;
+    overflow-y: auto;
+    border: 1px solid #e9adff;
+    background: #fff;
+    color: #000;
+    font-family: "League Spartan";
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    cursor: pointer;
 }
 
-.notification-card:hover {
+.notification-message:hover {
   color: #a426d1;
   cursor: pointer;
   font-weight: 500;
@@ -234,5 +236,21 @@
 
 .notification-arrow {
   margin-left: 11px;
-  margin-top: 2px;
+  margin-top: 10px;
+}
+
+.notification-position{
+  position:absolute;
+  right:0px;
+  top:100px;
+}
+
+.bksdfh{
+  position: fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height: 100%;
+  background-color: transparent;
+  
 }
