--- a/src/app/modules/freelancernav/freelancernav.component.scss
+++ b/src/app/modules/freelancernav/freelancernav.component.scss
@@ -549,3 +549,70 @@
 
 
             }
+
+
+
+
+            
+//Notifications
+.notification-card {
+    display: flex;
+      width: 226px;
+      padding: 21px 20px 20px 20px;
+      gap: 10px;
+      border-radius: 10px;
+      height: 244px;
+      scrollbar-width: thin;
+      scrollbar-color: #a426d1 transparent;
+      overflow-y: auto;
+      border: 1px solid #e9adff;
+      background: #fff;
+      color: #000;
+      font-family: "League Spartan";
+      font-size: 13px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      cursor: pointer;
+  }
+  
+  .notification-message:hover {
+    color: #a426d1;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+  }
+  
+  .notification-head {
+    display: flex;
+    border-bottom: 1px solid #a426d1;
+    padding: 8px;
+    line-height: 19px;
+  }
+  
+  .notification-view {
+    color: #a426d1;
+    font-size: 14px;
+    display: flex;
+  }
+  
+  .notification-arrow {
+    margin-left: 11px;
+    margin-top: 10px;
+  }
+  
+  .notification-position{
+    position:absolute;
+    right:0px;
+    top:100px;
+  }
+  
+  .bksdfh{
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    background-color: transparent;
+    z-index: 111;
+  }
