--- a/src/app/modules/progress-jobs/progress-jobs.component.html
+++ b/src/app/modules/progress-jobs/progress-jobs.component.html
@@ -82,25 +82,27 @@
         </div>
         <div style="margin-top: 26px;">
           <form #updateForm="ngForm" (ngSubmit)="onSubmitStatus(updateForm)">
-            <input type="hidden" id="id" name="id" [(ngModel)]="selectedhire.id">
-            <input type="hidden" id="status" name="status" [(ngModel)]="selectedhire.status">
-            <input type="hidden" id="postBy" name="postBy" [(ngModel)]="selectedhire.postBy">
-            <input type="hidden" id="jobId" name="jobId" [(ngModel)]="selectedhire.jobId">
-            <input type="hidden" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="selectedhire.jobUniqueId">
-            <button (click)="submitNow();"  type="submit" class="rejectconfirm1">Accept Offer</button>
+            <input type="text" id="id" name="id" [(ngModel)]="selectedhire.id">
+            <input type="text" id="status" name="status" [(ngModel)]="selectedhire.status">
+            <input type="text" id="postBy" name="postBy" [(ngModel)]="selectedhire.postBy">
+            <input type="text" id="jobId" name="jobId" [(ngModel)]="selectedhire.jobId">
+            <input type="text" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="selectedhire.jobUniqueId">
+            <button type="submit" class="">Accept Offer</button>
           </form>
-          <form #notificationForm="ngForm" (ngSubmit)="onSubmitNotification(notificationForm)">
+          <button  (click)="submitBothForms();"  class="btn rejectconfirm1">Accept Offer</button>
+          <form #jobUpdateForm="ngForm" (ngSubmit)="onSubmitJobStatus(jobUpdateForm)">
+            <input type="text" id="id" name="id" [(ngModel)]="selectedhire.jobId">
+            <input type="text" id="status" name="status" [(ngModel)]="jobPosts[0].status">
+            <button type="submit" class="">Accept Offer</button>
+          </form>
+          <!-- <form #notificationForm="ngForm" (ngSubmit)="onSubmitNotification(notificationForm)">
             <input type="hidden" id="id" name="id" [(ngModel)]="notificationsService.notificationData.id">
             <input type="hidden" id="userId" name="userId" [(ngModel)]="notificationsService.notificationData.userId">
             <input type="hidden" id="notification" name="notification" [(ngModel)]="notificationsService.notificationData.notification">
             <input type="hidden" id="notificationDate" name="notificationDate" [(ngModel)]="notificationsService.notificationData.notificationDate">
             <button type="submit" class="d-none" #notificationButton>Save</button>
-           </form>
-          <form #jobUpdateForm="ngForm" (ngSubmit)="onSubmitJobStatus(jobUpdateForm)">
-            <input type="hidden" id="id" name="id" [(ngModel)]="selectedhire.jobId">
-            <input type="hidden" id="status" name="status" [(ngModel)]="jobPosts[0].status">
-            <button  #submitbutton type="submit" class="d-none">Accept Offer</button>
-          </form>
+           </form> -->
+    
         </div>
       </div>
     </div>
