--- a/src/app/modules/forget-password/new-password/new-password.component.html
+++ b/src/app/modules/forget-password/new-password/new-password.component.html
@@ -20,12 +20,16 @@
             </div>
             <p class="head" style="margin-top: 32px;">Update Your Password</p>
             <p class="forgetleft1">New Password</p>
-            <input type="password" class="int" style="width:430px" placeholder="New Password" id="newpassword" name="newpassword">
+            <form    novalidate
+            #updatepasswordform="ngForm"
+            (ngSubmit)="onSubmitPassword(updatepasswordform);">
+            <input type="password" class="int" style="width:430px" placeholder="New Password" id="password" name="password"   [(ngModel)]="userservice.userData.password">
             <p class="forgetleft1">Confirm Password</p>
-            <input type="password" class="int" style="width:430px" placeholder="Confirm Password" id="currentpassword" name="currentpassword">
+            <input type="password" class="int" style="width:430px" placeholder="Confirm Password" id="password" name="password">
             <div class="flx1">
                 <button class="btnfr2" type="submit"><span>Submit</span></button>
             </div>
+        </form>
         </div>
     </div>
 </form>
